--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nacoss paymentGate way</title>
     <link rel="stylesheet" href="style.css">
    
 
 </head>
 <body>
+     <h1>Nacos Payment Gateway</h1>
     <h1>Choose Payment</h1>
 <p id="choosen-paymenttype">Credit Card</p>
 <ul class="payment-types">
@@ -29,14 +30,7 @@
     </header>
     <form>
       <div class="form-content">
-        <p><strong>About</strong></p>
- <p>This is a basic concept for a payment, checkout process. The user can select between the different payment types, each type has a seperate form to fill in the required data for the transaction. What I tried to provide:</p> 
-      <ul>
-        <li>A quick and easy way to fill the required form fields.</li>
-        <li>Mobile friendly keyboard display</li>
-        <li>Disabling auto-correction and spellcheck for names</li>
-        <li>Avoid dropdown fields for a better UX.</li>
-      </ul>     
+        <p><strong>CyberSPaceX</strong></p>
       </div>
     </form>
     </div>
