--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </header>
     <form>
       <div class="form-content">
-        <p><strong>CyberSPaceX</strong></p>
+        <p><strong>Coming Soon</strong></p>
       </div>
     </form>
     </div>
