--- a/public/index.html
+++ b/public/index.html
@@ -1,185 +1,151 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nacoss paymentGate way</title>
-    <link rel="stylesheet" href="style.css">
-   
+import React, { useState, useRef, useEffect } from 'react';
+import './App.css';
 
-</head>
-<body>
-     <h1>Nacos Payment Gateway</h1>
-    <h1>Choose Payment</h1>
-<p id="choosen-paymenttype">Credit Card</p>
-<ul class="payment-types">
-  <li class="paymenttype pp unselected-left">
-    <div class="box">
-    <header>
-      <div class="card" id="pp-card">
-        <div class="flipper">
-          <div class="front">
-            <div class="shine"></div>
-            <div class="shadow"></div>
-            <div class="card-bg">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/513985/pp-front-bg.png" />
-            </div>
-          </div>
+const App = () => {
+  const [error, setError] = useState(null);
+  const [value, setValue] = useState("");
+  const [loading, setLoading] = useState(false);
+  const [chatHistory, setChatHistory] = useState([]);
+  const chatEndRef = useRef(null);
+
+  const Timeout = 120;
+  let data;
+
+  const clear = () => {
+    setError(null);
+    setValue('');
+  }
+
+  const selectRandomOPtions = [
+    "How were you made?",
+    "How do i make a pizza ?",
+    "What time is it today?",
+    "What is the best coding language?",
+    "What's your favorite hobby or pastime?",
+    "If you could travel anywhere in the world right now, where would you go?",
+    "What's the most interesting thing you've learned recently?",
+    "Do you prefer reading books or watching movies?",
+    "If you could have any superpower, what would it be and why?",
+    "What's your go-to comfort food?",
+    "If you could meet any historical figure, who would it be and what would you ask them?",
+    "What's your favorite way to relax after a long day?",
+    "What's the best piece of advice you've ever received?",
+    "If you could switch lives with any fictional character for a day, who would it be and what would you do?"
+  ]
+
+  const selectRandomly = () => {
+    const randomValue = selectRandomOPtions[Math.floor(Math.random() * selectRandomOPtions.length)];
+    setValue(randomValue);
+  }
+
+  const fetchData = async () => {
+    const options = {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({
+        history: chatHistory,
+        message: value
+      })
+    };
+
+    const response = await fetch("https://gemini-server-1kvg.onrender.com/gemini/send-response", options);
+    const result = await response.text();
+    return result;
+  }
+
+  const fetchDataAndHandleTimeout = async () => {
+    try {
+      const result = await Promise.race([
+        fetchData(),
+        new Promise((resolve) => setTimeout(resolve, Timeout * 1000))
+      ]);
+      return result;
+    } catch (error) {
+      setError("Timeout, please check your internet connection");
+      setLoading(false);
+    }
+  }
+
+  const getResponse = async () => {
+    if (!value) {
+      setError("Error: please enter a value");
+      return;
+    }
+
+    try {
+      setLoading(true);
+      data = await fetchDataAndHandleTimeout();
+      const formattedRes = data.split('\\n').map((part, index) => <p key={index}>{part}</p>);
+
+      setChatHistory(oldChatHistory => [
+        ...oldChatHistory,
+        { role: "user", parts: value },
+        { role: "Geminoid", parts: formattedRes }
+      ]);
+
+      setValue('');
+      setLoading(false);
+      scrollToBottom();
+    } catch (error) {
+      setLoading(false);
+      setError("something went wrong");
+    }
+  }
+
+  const listenEnter = (e) => {
+    if (e.key === "Enter") {
+      getResponse();
+    }
+  }
+
+  const scrollToBottom = () => {
+    chatEndRef.current?.scrollIntoView({ behavior: 'smooth' });
+  }
+
+  useEffect(() => {
+    scrollToBottom();
+  }, [chatHistory]);
+
+  return (
+    <div className="app">
+      <h1 className='app-title'>Geminiod</h1>
+      <section className='app'>
+        <p>
+          what do you want to know?
+          <button className='suprise-me' onClick={selectRandomly} disabled={!chatHistory || loading}>suprise me</button>
+        </p>
+
+        <div className='search-container'>
+          <input value={value} placeholder='What is todays weather?' onKeyDown={listenEnter} onChange={e => setValue(e.target.value)}></input>
+          {!error && <button className='search-button' onClick={getResponse}>Search</button>}
+          {error && <button className='search-button' onClick={clear}>clear</button>}
         </div>
-      </div>
-    </header>
-    <form>
-      <div class="form-content">
-        <p><strong>Coming Soon</strong></p>
-      </div>
-    </form>
+        <p>{error}</p>
+
+        <div className='search-result'>
+          {
+            chatHistory.map((chatItem, _index) => (
+              <div className='Answer' key={_index}>
+                <p>
+                  {chatItem.role} : {chatItem.parts}
+                </p>
+              </div>
+            ))
+          }
+
+          {loading && (
+            <div className='Answer'>
+              <div className="spinner"></div>
+            </div>
+          )}
+
+          <div ref={chatEndRef}></div>
+        </div>
+      </section>
     </div>
-  </li>
-  <li class="paymenttype selected cc">
-    <div class="box">
-    <header>
-      <div class="card" id="cc-card">
-        <div class="flipper">
-          <div class="front">
-            <div class="shine"></div>
-            <div class="shadow"></div>
-            <div class="card-bg">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/513985/cc-front-bg.png" />
-            </div>
-            <div class="card-content">
-              <div class="credit-card-type"></div>
-              <div class="card-number">
-                <span>1234 1234 1234 1234</span>
-                <span>1234 1234 1234 1234</span>
-              </div>
-              <div class="card-holder">
-                <em>Card holder</em>
-                <span>Your Name</span>
-                <span>Your Name</span>
-              </div>
-              <div class="validuntil">
-                <em>Expire</em>
-                <div class="e-month">
-                    <span>
-                      MM
-                    </span>
-                    <span>
-                      MM
-                    </span>
-                </div>
-                <div class="e-divider">
-                     <span>
-                      /
-                    </span>
-                    <span>
-                      /
-                    </span>
-                </div>
-                <div class="e-year">
-                    <span>
-                      YY
-                    </span>
-                    <span>
-                      YY
-                    </span>
-                </div>
-                
-              </div>
-            </div>
-          </div>
+  );
+}
 
-          <div class="back">
-            <div class="shine"></div>
-            <div class="shadow"></div>
-            <div class="card-bg">
-             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/513985/cc-back-bg-new.png" />
-            </div>
-            <div class="ccv">
-              <em>CCV Number</em>
-              <strong></strong>
-            </div>
-            <div class="card-content">
-              <div class="card-number">
-                <span>4111 1111 1111 1111</span>
-                <span>4111 1111 1111 1111</span>
-              </div>
-              <div class="card-holder">
-                <span>Your Name</span>
-                <span>Your Name</span>
-              </div>
-              <div class="validuntil">
-                <span>
-                  <strong class="e-month">MM</strong> /                 <strong class="e-year">YY</strong>
-                </span>
-                <span>
-                  <strong class="e-month">MM</strong> /
-                  <strong class="e-year">YY</strong>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <form>
-      <div class="form-content">
-        <div class="field">
-          <input type="tel" id="cardnumber" maxlength="20" />
-          <span class="focus-bar"></span>
-          <label for="cardnumber">Card number</label>
-        </div>
-        <div class="field">
-          <input type="text" autocorrect="off" spellcheck="false" id="cardholder" maxlength="25" />
-          <span class="focus-bar"></span>
-          <label for="cardholder">Card holder (Name on card)</label>
-        </div>
-        <div class="field-group">
-          <div class="col-50">
-            <label for="expires-month">Expire (Valid until)</label>   
-            <div class="field expire-date">
-              <div>
-                <input type="tel" id="expires-month" placeholder="MM" allowed-pattern="[0-9]" maxlength="2">
-                <span class="focus-bar"></span>
-              </div>
-              <div class="divider">/</div>
-              <div>
-                <input type="tel" id="expires-year" placeholder="YY" allowed-pattern="[0-9]" maxlength="2">
-                <span class="focus-bar"></span>
-              </div>
-            </div>
-          </div>
-          <div class="col-50">
-            <div class="field ccv">
-              <input type="tel" id="ccv" autocomplete="off" maxlength="3" />
-              <span class="focus-bar"></span>
-              <label for="ccv">CCV</label>
-            </div>
-          </div>
-        </div>
-        <button><span>Submit</span></button>
-      </div>
-    </form>
-    </div>
-  </li>
-  <li class="paymenttype ec unselected-right">
-    <div class="box">
-    <header>
-      <div class="card" id="ec-card">
-        <div class="flipper">
-          <div class="front">
-            <div class="shine"></div>
-            <div class="shadow"></div>
-            <div class="card-bg">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/513985/ec-front-bg.png" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-     </div>
-  </li>
-</ul>
-<script  src="index.js"></script>
-</body>
-</html>
+export default App;
